[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/ui/menus/main_menu.gd" id="1_main_menu"]
[ext_resource type="PackedScene" path="res://scenes/ui/menus/settings_screen.tscn" id="2_settings_screen"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.2, 0.25, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 180.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "AnimalsCraft"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
visible = false
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "Continue"

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "New Game"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "Settings"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "Exit"

[node name="ErrorDialog" type="AcceptDialog" parent="."]
title = "Oops!"
size = Vector2i(400, 150)
dialog_text = "Couldn't load your save.
Would you like to start a new adventure?"
dialog_autowrap = true

[node name="SettingsScreen" parent="." instance=ExtResource("2_settings_screen")]
layout_mode = 1
